--- a/GrandadAudioPlayer/xaml/MainWindow.xaml
+++ b/GrandadAudioPlayer/xaml/MainWindow.xaml
@@ -4,16 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GrandadAudioPlayer"
+        xmlns:xaml="clr-namespace:GrandadAudioPlayer.xaml"
         mc:Ignorable="d"
         Title="MainWindow" Height="726.282" Width="1212.179" WindowState="Maximized"
         DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
     <Grid Width="auto" Height="auto">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*"></ColumnDefinition>
+            <ColumnDefinition Width="4*"></ColumnDefinition>
             <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="0" Margin="0,0,1,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
@@ -21,6 +22,7 @@
             <Label Content="Choose what to play:" FontSize="36"></Label>
             <local:FolderView Grid.Row="1"></local:FolderView>
         </Grid>
+        <xaml:PlaylistView Grid.Column="1"></xaml:PlaylistView>
 
     </Grid>
 
