--- a/GrandadAudioPlayer/xaml/FolderView.xaml
+++ b/GrandadAudioPlayer/xaml/FolderView.xaml
@@ -4,17 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GrandadAudioPlayer"
-             xmlns:treeView="clr-namespace:GrandadAudioPlayer.Model.TreeView"
+             xmlns:folderView="clr-namespace:GrandadAudioPlayer.Model.FolderView"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding FolderViewModel, Source={StaticResource Locator}}">
     <Grid>
         <TreeView ItemsSource="{Binding RootFolder}">
             <TreeView.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightBlue"></SolidColorBrush>
-                <HierarchicalDataTemplate DataType="{x:Type treeView:TreeViewFolder}" ItemsSource="{Binding Children}">
+                <HierarchicalDataTemplate DataType="{x:Type folderView:FolderItemFolder}" ItemsSource="{Binding Children}">
                     <Label Content="{Binding Name}" FontSize="20" FontWeight="Bold"></Label>
                 </HierarchicalDataTemplate>
-                <DataTemplate DataType="{x:Type treeView:TreeViewFile}">
+                <DataTemplate DataType="{x:Type folderView:FolderItemFile}">
                     <Label Content="{Binding Name}" FontSize="20"></Label>
                 </DataTemplate>
             </TreeView.Resources>
