--- a/GrandadAudioPlayer/xaml/MainWindow.xaml
+++ b/GrandadAudioPlayer/xaml/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="GrandadAudioPlayer.MainWindow"
+﻿<Window x:Class="GrandadAudioPlayer.xaml.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -20,7 +20,7 @@
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Label Content="Choose what to play:" FontSize="36"></Label>
-            <local:FolderView Grid.Row="1"></local:FolderView>
+            <xaml:FolderView Grid.Row="1"></xaml:FolderView>
         </Grid>
         <xaml:PlaylistView Grid.Column="1"></xaml:PlaylistView>
 
