--- a/GrandadAudioPlayer/xaml/MainWindow.xaml
+++ b/GrandadAudioPlayer/xaml/MainWindow.xaml
@@ -8,23 +8,34 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="726.282" Width="1212.179" WindowState="Maximized"
         DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
-    <Grid Width="auto" Height="auto">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="4*"></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Margin="0,0,1,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <Label Content="Choose what to play:" FontSize="36"></Label>
-            <xaml:FolderView Grid.Row="1"></xaml:FolderView>
+    <DockPanel>
+        <xaml:UserControl1 DockPanel.Dock="Bottom"></xaml:UserControl1>
+        <Grid Width="auto" Height="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Border BorderBrush="Black" BorderThickness="1" Margin="5,5,5,5">
+                <Grid Grid.Column="0" Margin="0,0,1,0" HorizontalAlignment="Stretch">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Label Content="Choose what to play:" FontSize="28"></Label>
+                    <xaml:FolderView Grid.Row="1"></xaml:FolderView>
+                </Grid>
+            </Border>
+            <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1" Margin="5,5,5,5">
+                <Grid Margin="0,0,1,0" DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Label Content="Playlist:" FontSize="28"></Label>
+                    <xaml:PlaylistView Grid.Row="1" HorizontalAlignment="Stretch"></xaml:PlaylistView>
+                </Grid>
+            </Border>
         </Grid>
-        <xaml:PlaylistView Grid.Column="1"></xaml:PlaylistView>
 
-    </Grid>
-
-
+    </DockPanel>
 </Window>
