--- a/GrandadAudioPlayer/xaml/PlaylistView.xaml
+++ b/GrandadAudioPlayer/xaml/PlaylistView.xaml
@@ -8,12 +8,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
     <Grid>
-        <ListView ItemsSource="{Binding Playlist}">
+        <ListView ItemsSource="{Binding Playlist}" BorderBrush="{x:Null}" BorderThickness="0" SelectionMode="Single">
             <ListView.Resources>
                 <DataTemplate DataType="{x:Type playList:PlaylistItem}">
-                    <Label Content="{Binding Name}"></Label>
+                    <Label Content="{Binding Name}" FontSize="20"></Label>
                 </DataTemplate>
             </ListView.Resources>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="IsSelected" Value="{Binding IsSelected}"></Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
         </ListView>
     </Grid>
 </UserControl>
