Added ability to track currently playing item in playlist (and allow user to select track)

--- a/GrandadAudioPlayer/xaml/ControlsView.xaml
+++ b/GrandadAudioPlayer/xaml/ControlsView.xaml
@@ -20,7 +20,7 @@
         </StackPanel>
         <StackPanel Grid.Row="2" Orientation="Horizontal">
             <Label FontSize="20" Content="Currently Playing: "></Label>
-            <Label FontSize="20" Content="Track name"></Label>
+            <Label FontSize="20" Content="{Binding CurrentItem.Name}"></Label>
         </StackPanel>
     </Grid>
 </UserControl>
