--- a/GrandadAudioPlayer/xaml/ControlsView.xaml
+++ b/GrandadAudioPlayer/xaml/ControlsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GrandadAudioPlayer.xaml.UserControl1"
+﻿<UserControl x:Class="GrandadAudioPlayer.xaml.ControlsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,21 +6,17 @@
              xmlns:local="clr-namespace:GrandadAudioPlayer.xaml"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel ,Source={StaticResource Locator}}">
-    <Grid HorizontalAlignment="Center">
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Back" Margin="5,0,5,0" Command="{Binding PreviousCommand}"></Button>
-            <Button Content="Play/Pause" Margin="5,0,5,0" Command="{Binding PlayPauseCommand}"></Button>
-            <Button Content="Stop" Margin="5,0,5,0" Command="{Binding StopCommand}"></Button>
-            <Button Content="Forward" Margin="5,0,5,0" Command="{Binding NextCommand}"></Button>
-        </StackPanel>
-        <StackPanel Grid.Row="2" Orientation="Horizontal">
-            <Label FontSize="20" Content="Currently Playing: "></Label>
-            <Label FontSize="20" Content="{Binding CurrentItem.Name}"></Label>
-        </StackPanel>
-    </Grid>
+    <Border BorderBrush="Black" BorderThickness="1" Margin="5,5,5,5">
+        <Grid HorizontalAlignment="Center" Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Content="Back" Margin="5" Command="{Binding PreviousCommand}"></Button>
+                <Button Content="Play/Pause" Margin="5" Command="{Binding PlayPauseCommand}"></Button>
+                <Button Content="Stop" Margin="5" Command="{Binding StopCommand}"></Button>
+                <Button Content="Forward" Margin="5" Command="{Binding NextCommand}"></Button>
+            </StackPanel>
+        </Grid>
+    </Border>
 </UserControl>
