Changed size of button

--- a/GrandadAudioPlayer/xaml/ControlsView.xaml
+++ b/GrandadAudioPlayer/xaml/ControlsView.xaml
@@ -12,10 +12,10 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Button Content="Back" Margin="5" Command="{Binding PreviousCommand}"></Button>
-                <Button Content="Play/Pause" Margin="5" Command="{Binding PlayPauseCommand}"></Button>
-                <Button Content="Stop" Margin="5" Command="{Binding StopCommand}"></Button>
-                <Button Content="Forward" Margin="5" Command="{Binding NextCommand}"></Button>
+                <Button Content="Back" Margin="5" Command="{Binding PreviousCommand}" Width="65" Height="20"></Button>
+                <Button Content="Play/Pause" Margin="5" Command="{Binding PlayPauseCommand}" Width="65" Height="20"></Button>
+                <Button Content="Stop" Margin="5" Command="{Binding StopCommand}" Width="65" Height="20"></Button>
+                <Button Content="Forward" Margin="5" Command="{Binding NextCommand}" Width="65" Height="20"></Button>
             </StackPanel>
         </Grid>
     </Border>
