--- a/GrandadAudioPlayerAdmin/MainWindow.xaml
+++ b/GrandadAudioPlayerAdmin/MainWindow.xaml
@@ -4,18 +4,39 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GrandadAudioPlayerAdmin"
+        xmlns:utils="clr-namespace:GrandadAudioPlayerAdmin.Utils"
         mc:Ignorable="d"
         Title="Grandad Audio Player Administration" Height="206.614" Width="925" ResizeMode="NoResize"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
+    <Window.Resources>
+        
+    </Window.Resources>
     <Grid HorizontalAlignment="Left" Margin="0,0,0,-4" Width="919" Height="182" VerticalAlignment="Top">
         <Label Content="Music Directory:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox Height="25" Margin="9,41,176,0" TextWrapping="Wrap" Text="{Binding FolderPath}" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox Height="25" Margin="9,41,176,0" TextWrapping="Wrap" Text="{Binding FolderPath}" VerticalAlignment="Top" FontSize="16" IsEnabled="False"/>
         <Button Command="{Binding LoadConfigurationCommand}" Content="Load Configuration" Margin="573,140,0,16" FontSize="16" HorizontalAlignment="Left" Width="160"/>
         <Button Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Margin="748,140,0,16" FontSize="16" HorizontalAlignment="Left" Width="160"/>
         <Button Command="{Binding OpenFileDialogCommand}" Content="Open File Dialog" Margin="748,41,0,0" VerticalAlignment="Top" FontSize="16" HorizontalAlignment="Left" Width="160"/>
         <Label Content="Allowed Extensions - Comma Seperated (no spaces)" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox Height="26" Margin="10,102,10,0" TextWrapping="Wrap" Text="{Binding AllowedExtensions}" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox Height="26" Margin="10,102,10,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16">
+            <TextBox.Text>
+                <Binding Path="AllowedExtensions" NotifyOnValidationError="True">
+                    <Binding.ValidationRules>
+                        <utils:AllowedExtensionValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+            <TextBox.Resources>
+                <Style TargetType="{x:Type TextBox}">
+                    <Style.Triggers>
+                        <Trigger Property="Validation.HasError" Value="True">
+                            <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}"></Setter>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
         <Label Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="10,136,0,10" FontSize="16" Width="550"/>
-
+        
     </Grid>
 </Window>
