--- a/GrandadAudioPlayer/xaml/PlaylistView.xaml
+++ b/GrandadAudioPlayer/xaml/PlaylistView.xaml
@@ -3,11 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:GrandadAudioPlayer.xaml"
              xmlns:playList="clr-namespace:GrandadAudioPlayer.Model.PlayList"
              xmlns:listViewItemBehaviour="clr-namespace:GrandadAudioPlayer.Utils.AttachedBehaviours"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
+             d:DesignHeight="450" d:DesignWidth="800"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             TextElement.FontWeight="Regular"
+             TextElement.FontSize="13"
+             TextOptions.TextFormattingMode="Ideal"
+             TextOptions.TextRenderingMode="Auto"
+             Background="{DynamicResource MaterialDesignPaper}"
+             FontFamily="{DynamicResource MaterialDesignFont}"
+             DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
     <Grid>
         <ListView ItemsSource="{Binding Playlist}" SelectedItem="{Binding CurrentItem, Mode=TwoWay}" BorderBrush="{x:Null}" BorderThickness="0" SelectionMode="Single">
             <ListView.Resources>
