--- a/GrandadAudioPlayer/xaml/FolderView.xaml
+++ b/GrandadAudioPlayer/xaml/FolderView.xaml
@@ -8,31 +8,19 @@
              xmlns:folderView="clr-namespace:GrandadAudioPlayer.Model.FolderView"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-             TextElement.FontWeight="Regular"
-             TextElement.FontSize="13"
-             TextOptions.TextFormattingMode="Ideal"
-             TextOptions.TextRenderingMode="Auto"
-             Background="{DynamicResource MaterialDesignPaper}"
-             FontFamily="{DynamicResource MaterialDesignFont}"
              DataContext="{Binding FolderViewModel, Source={StaticResource Locator}}">
     <Grid>
 
-        <TreeView ItemsSource="{Binding RootFolder}" BorderBrush="{x:Null}" BorderThickness="0">
+        <TreeView ItemsSource="{Binding RootFolder}" SelectedItemChanged="TreeView_SelectedItemChanged">
             <TreeView.Resources>
-                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightBlue"></SolidColorBrush>
                 <HierarchicalDataTemplate DataType="{x:Type folderView:FolderItemFolder}" ItemsSource="{Binding Children}">
-                    <Label Content="{Binding Name}" FontSize="20" FontWeight="Bold"></Label>
+                    <TextBlock Text="{Binding Name}" Padding="0,5" Style="{DynamicResource MaterialDesignHeadlineTextBlock}"></TextBlock>
                 </HierarchicalDataTemplate>
                 <DataTemplate DataType="{x:Type folderView:FolderItemFile}">
-                    <Label Content="{Binding Name}" FontSize="20"></Label>
+                    <TextBlock Text="{Binding Name}" Padding="0,5"></TextBlock>
                 </DataTemplate>
             </TreeView.Resources>
-            <TreeView.ItemContainerStyle>
-                <Style TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-                </Style>
-            </TreeView.ItemContainerStyle>
+
         </TreeView>
     </Grid>
 </UserControl>
