--- a/GrandadAudioPlayer/xaml/MainWindow.xaml
+++ b/GrandadAudioPlayer/xaml/MainWindow.xaml
@@ -8,6 +8,13 @@
         xmlns:xaml="clr-namespace:GrandadAudioPlayer.xaml"
         mc:Ignorable="d"
         Title="MainWindow" Height="726.282" Width="1212.179" WindowState="Maximized"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{StaticResource MaterialDesignFont}"
         DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
     <DockPanel>
         <Grid Width="auto" Height="Auto" DockPanel.Dock="Bottom">
@@ -24,23 +31,27 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <material:Card Padding="5,32" Margin="16">
+            <material:Card Padding="5,10" Margin="10" VerticalAlignment="Stretch">
                 <Grid Grid.Column="0" Margin="0,0,1,0" HorizontalAlignment="Stretch">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <Label Content="Choose what to play:" FontSize="28"></Label>
+                    <material:ColorZone Mode="PrimaryMid" Padding="10">
+                        <TextBlock Text="Choose what to play:" Style="{DynamicResource MaterialDesignTitleTextBlock}" />
+                    </material:ColorZone>
                     <xaml:FolderView Grid.Row="1"></xaml:FolderView>
                 </Grid>
             </material:Card>
-            <material:Card Padding="32" Margin="16" Grid.Column="1">
+            <material:Card Padding="5,10" Margin="10" Grid.Column="1" VerticalAlignment="Stretch">
                 <Grid Margin="0,0,1,0" DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <Label Content="Selected Playlist:" FontSize="28"></Label>
+                    <material:ColorZone Mode="PrimaryMid" Padding="10">
+                        <TextBlock Text="Selected Playlist:" Style="{DynamicResource MaterialDesignTitleTextBlock}" />
+                    </material:ColorZone>
                     <xaml:PlaylistView Grid.Row="1" HorizontalAlignment="Stretch"></xaml:PlaylistView>
                 </Grid>
             </material:Card>
