--- a/GrandadAudioPlayer/xaml/PlaylistView.xaml
+++ b/GrandadAudioPlayer/xaml/PlaylistView.xaml
@@ -9,20 +9,12 @@
              xmlns:listViewItemBehaviour="clr-namespace:GrandadAudioPlayer.Utils.AttachedBehaviours"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-             TextElement.FontWeight="Regular"
-             TextElement.FontSize="13"
-             TextOptions.TextFormattingMode="Ideal"
-             TextOptions.TextRenderingMode="Auto"
-             Background="{DynamicResource MaterialDesignPaper}"
-             FontFamily="{DynamicResource MaterialDesignFont}"
              DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
     <Grid>
-        <ListView ItemsSource="{Binding Playlist}" SelectedItem="{Binding CurrentItem, Mode=TwoWay}" BorderBrush="{x:Null}" BorderThickness="0" SelectionMode="Single">
+        <ListView ItemsSource="{Binding Playlist}" SelectedItem="{Binding CurrentItem, Mode=TwoWay}" SelectionMode="Single">
             <ListView.Resources>
-                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrush}" Color="LightBlue"></SolidColorBrush>
                 <DataTemplate DataType="{x:Type playList:PlaylistItem}">
-                    <Label Content="{Binding Name}" FontSize="20"></Label>
+                    <TextBlock Padding="0,5" Text="{Binding Name}" Style="{DynamicResource MaterialDesignHeadlineTextBlock}"></TextBlock>
                 </DataTemplate>
             </ListView.Resources>
             <ListView.ItemContainerStyle>
