--- a/GrandadAudioPlayer/xaml/ControlsView.xaml
+++ b/GrandadAudioPlayer/xaml/ControlsView.xaml
@@ -4,20 +4,52 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GrandadAudioPlayer.xaml"
+             xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel ,Source={StaticResource Locator}}">
-    <Border BorderBrush="Black" BorderThickness="1" Margin="5,5,5,5">
-        <Grid HorizontalAlignment="Center" Margin="5">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Button Content="Back" Margin="5" Command="{Binding PreviousCommand}" Width="65" Height="20"></Button>
-                <Button Content="Play" Margin="5" Command="{Binding PlayCommand}" Width="65" Height="20"></Button>
-                <Button Content="Pause" Margin="5" Command="{Binding PauseCommand}" Width="65" Height="20"></Button>
-                <Button Content="Stop" Margin="5" Command="{Binding StopCommand}" Width="65" Height="20"></Button>
-                <Button Content="Forward" Margin="5" Command="{Binding NextCommand}" Width="65" Height="20"></Button>
-            </StackPanel>
-        </Grid>
-    </Border>
+    <Grid HorizontalAlignment="Center" Margin="5">
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{Binding PreviousCommand}" Style="{StaticResource MaterialDesignFloatingActionButton}" Margin="5">
+                <Button.ToolTip>
+                    <ToolTip Placement="Top">
+                        <TextBlock Text="Previous" Style="{DynamicResource MaterialDesignDisplay1TextBlock}"></TextBlock>
+                    </ToolTip>
+                </Button.ToolTip>
+                <material:PackIcon Kind="SkipPrevious" Width="32" Height="32"></material:PackIcon>
+            </Button>
+            <Button Command="{Binding PlayCommand}" Style="{StaticResource MaterialDesignFloatingActionButton}" Margin="5">
+                <Button.ToolTip>
+                    <ToolTip Placement="Top">
+                        <TextBlock Text="Play" Style="{DynamicResource MaterialDesignDisplay1TextBlock}"></TextBlock>
+                    </ToolTip>
+                </Button.ToolTip>
+                <material:PackIcon Kind="Play" Width="32" Height="32"></material:PackIcon>
+            </Button>
+            <Button Command="{Binding PauseCommand}" Style="{StaticResource MaterialDesignFloatingActionButton}" Margin="5">
+                <Button.ToolTip>
+                    <ToolTip Placement="Top">
+                        <TextBlock Text="Pause" Style="{DynamicResource MaterialDesignDisplay1TextBlock}"></TextBlock>
+                    </ToolTip>
+                </Button.ToolTip>
+                <material:PackIcon Kind="Pause" Width="32" Height="32"></material:PackIcon>
+            </Button>
+            <Button Command="{Binding StopCommand}" Style="{StaticResource MaterialDesignFloatingActionButton}" Margin="5">
+                <Button.ToolTip>
+                    <ToolTip Placement="Top">
+                        <TextBlock Text="Stop" Style="{DynamicResource MaterialDesignDisplay1TextBlock}"></TextBlock>
+                    </ToolTip>
+                </Button.ToolTip>
+                <material:PackIcon Kind="Stop" Width="32" Height="32"></material:PackIcon>
+            </Button>
+            <Button Command="{Binding NextCommand}" Style="{StaticResource MaterialDesignFloatingActionButton}" Margin="5">
+                <Button.ToolTip>
+                    <ToolTip Placement="Top">
+                        <TextBlock Text="Next" Style="{DynamicResource MaterialDesignDisplay1TextBlock}"></TextBlock>
+                    </ToolTip>
+                </Button.ToolTip>
+                <material:PackIcon Kind="SkipForward" Width="32" Height="32"></material:PackIcon>
+            </Button>
+        </StackPanel>
+    </Grid>
+
 </UserControl>
