--- a/GrandadAudioPlayer/xaml/InformationView.xaml
+++ b/GrandadAudioPlayer/xaml/InformationView.xaml
@@ -4,39 +4,39 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GrandadAudioPlayer.xaml"
+             xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel, Source={StaticResource Locator}}">
-    <Border BorderBrush="Black" BorderThickness="1" Margin="5,5,5,5">
-        <Grid HorizontalAlignment="Stretch">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0"  Text="Track Information" FontSize="16" Margin="5,5,5,5"></TextBlock>
+    <Grid HorizontalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="1" Margin="5">
-                <TextBlock.Text>
-                    <MultiBinding StringFormat="Track: {0}">
-                        <Binding Path="CurrentItem.Name"></Binding>
-                    </MultiBinding>
-                </TextBlock.Text>
-            </TextBlock>
-            <TextBlock Grid.Row="2" Margin="5">
-                <TextBlock.Text>
-                    <MultiBinding StringFormat="Title: {0}">
-                        <Binding Path="CurrentItem.Id3Tags.Title"></Binding>
-                    </MultiBinding>
-                </TextBlock.Text>
-            </TextBlock>
-            <TextBlock Grid.Row="3" Margin="5">
-                <TextBlock.Text>
-                    <MultiBinding StringFormat="Album: {0}">
-                        <Binding Path="CurrentItem.Id3Tags.Album"></Binding>
-                    </MultiBinding>
-                </TextBlock.Text>
-            </TextBlock>
-        </Grid>
-    </Border>
+        <TextBlock Grid.Row="0"  Text="Track Information" Style="{DynamicResource MaterialDesignTitleTextBlock}" Margin="5,5,5,5"></TextBlock>
+
+        <TextBlock Grid.Row="1" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="File: {0}">
+                    <Binding Path="CurrentItem.Name"></Binding>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+        <TextBlock Grid.Row="2" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="Title: {0}">
+                    <Binding Path="CurrentItem.Id3Tags.Title"></Binding>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+        <TextBlock Grid.Row="3" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="Album: {0}">
+                    <Binding Path="CurrentItem.Id3Tags.Album"></Binding>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+    </Grid>
 </UserControl>
