--- a/GrandadAudioPlayerAdmin/MainWindow.xaml
+++ b/GrandadAudioPlayerAdmin/MainWindow.xaml
@@ -4,18 +4,48 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GrandadAudioPlayerAdmin"
+        xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Grandad Audio Player Administration" Height="206.614" Width="925" ResizeMode="NoResize"
+        Title="Grandad Audio Player Administration" Height="225" Width="925" ResizeMode="NoResize" Padding="10,10,10,0"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{StaticResource MaterialDesignFont}"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    <Grid HorizontalAlignment="Left" Margin="0,0,0,-4" Width="919" Height="182" VerticalAlignment="Top">
-        <Label Content="Music Directory:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox Height="25" Margin="9,41,176,0" TextWrapping="Wrap" Text="{Binding FolderPath}" VerticalAlignment="Top" FontSize="16"/>
-        <Button Command="{Binding LoadConfigurationCommand}" Content="Load Configuration" Margin="573,140,0,16" FontSize="16" HorizontalAlignment="Left" Width="160"/>
-        <Button Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Margin="748,140,0,16" FontSize="16" HorizontalAlignment="Left" Width="160"/>
-        <Button Command="{Binding OpenFileDialogCommand}" Content="Open File Dialog" Margin="748,41,0,0" VerticalAlignment="Top" FontSize="16" HorizontalAlignment="Left" Width="160"/>
-        <Label Content="Allowed Extensions - Comma Seperated (no spaces)" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox Height="26" Margin="10,102,10,0" TextWrapping="Wrap" Text="{Binding AllowedExtensions}" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="10,136,0,10" FontSize="16" Width="550"/>
+    <Grid HorizontalAlignment="Left" Margin="0,10,0,0"  Width="919" Height="auto" VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0" Padding="0,5,0,0" 
+                 material:HintAssist.Hint="Music Directory:"
+                 material:HintAssist.FloatingOffset="0, -24"
+                 Text="{Binding FolderPath}" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 IsReadOnly="True" FontSize="18"/>
+        <Button Grid.Row="1" Grid.Column="2" Command="{Binding OpenFileDialogCommand}" Content="Open File Dialog" Margin="10,10,10,0" Width="160"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0,10,5" 
+                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 material:HintAssist.Hint="Allowed Extensions - Comma Separated (no spaces)" 
+                 material:HintAssist.FloatingOffset="0,-24"
+                 Text="{Binding AllowedExtensions}" FontSize="18"></TextBox>
+        <Label Grid.Row="3" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
+        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoadConfigurationCommand}" Content="Load Configuration" Width="160"/>
+        <Button Grid.Row="3" Grid.Column="2" Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Width="160"/>
+        <!-- <Button Grid.Row="0" Grid.Column="2" Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Margin="748,140,0,16" FontSize="16" HorizontalAlignment="Left" Width="160"/> -->
+        
+        <!-- <Label Content="Allowed Extensions - Comma Seperated (no spaces)" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top" FontSize="16"/> -->
+        <!-- <TextBox Height="26" Margin="10,102,10,0" TextWrapping="Wrap" Text="{Binding AllowedExtensions}" VerticalAlignment="Top" FontSize="16"/> -->
+        <!-- <Label Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="10,10,0,136" FontSize="16" Width="723"/> -->
 
     </Grid>
 </Window>
