--- a/GrandadAudioPlayer/xaml/MainWindow.xaml
+++ b/GrandadAudioPlayer/xaml/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:xaml="clr-namespace:GrandadAudioPlayer.xaml"
         mc:Ignorable="d"
-        Title="MainWindow" Height="726.282" Width="1212.179" WindowState="Maximized"
+        Title="MainWindow" Height="726.282" Width="1212.179" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
