--- a/GrandadAudioPlayer/Views/AdminView.xaml
+++ b/GrandadAudioPlayer/Views/AdminView.xaml
@@ -4,10 +4,56 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             TextElement.FontWeight="Regular"
+             TextElement.FontSize="13"
+             TextOptions.TextFormattingMode="Ideal" 
+             TextOptions.TextRenderingMode="Auto"
+             Background="{DynamicResource MaterialDesignPaper}"
+             FontFamily="{StaticResource MaterialDesignFont}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-          <TextBlock Text="{Binding LabelContent}" />
+    <Grid HorizontalAlignment="Left" Margin="10"  Width="919" Height="auto" VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0" Padding="0,5,0,0" 
+                 md:HintAssist.Hint="Music Directory:"
+                 md:HintAssist.FloatingOffset="0, -24"
+                 Text="{Binding FolderPath}" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 IsReadOnly="True" FontSize="18"/>
+        <Button Grid.Row="1" Grid.Column="2" Command="{Binding OpenFileDialogCommand}" Content="Open File Dialog" Margin="10,10,10,0" Width="160"/>
+        <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="10,0,10,5" 
+                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 md:HintAssist.Hint="Allowed Extensions - Comma Separated (no spaces)" 
+                 md:HintAssist.FloatingOffset="0,-24"
+                 Text="{Binding AllowedExtensions}" FontSize="18"></TextBox>
+        <Label Grid.Row="3" Grid.Column="0" Content="{Binding FeedbackMessage}" HorizontalAlignment="Left" Margin="0,10,0,0"></Label>
+        <Button Grid.Row="3" Grid.Column="1" Command="{Binding LoadConfigurationCommand}" Content="Load Configuration" Width="160"/>
+        <Button Grid.Row="3" Grid.Column="2" Command="{Binding SaveConfigurationCommand}" Content="Save Configuration" Width="160"/>
+        <Button Grid.Row="4" Grid.Column="2" Command="{x:Static md:DialogHost.CloseDialogCommand}" Content="Close Admin Window" Margin="0,10,0,0"></Button>
+        <TextBlock 
+            Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" 
+            HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource MaterialDesignSubheadingTextBlock}"
+            Padding="0,5,0,0">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="Current Version: {0} Build Tag: {1}">
+                    <Binding Path="Version"></Binding>
+                    <Binding Path="BuildTag"></Binding>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
     </Grid>
 </UserControl>
