--- a/GrandadAudioPlayer/Views/TitleView.xaml
+++ b/GrandadAudioPlayer/Views/TitleView.xaml
@@ -1,13 +1,18 @@
-﻿<UserControl x:Class="GrandadAudioPlayer.Views.PlayerView"
+﻿<UserControl x:Class="GrandadAudioPlayer.Views.TitleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="{Binding LabelContent}" />
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Text="Title View"></TextBlock>
+        <TextBlock Grid.Row="1" Text="{Binding PlaylistManagerIdentifier}"></TextBlock>
     </Grid>
 </UserControl>
